style.css
body {
  font-family: 'Quicksand', sans-serif;
  font-size: 16px;
  color: white;
  margin: 0;
  padding: 0;
  text-align: center;
  line-height: 1.6rem;
}

.row-container{
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
}

h1{
  padding-top: 4.25rem;
  font-size: 3.61em;
  vertical-align: middle;
  line-height: normal;
  font-family: 'Francois One', sans-serif;

}

ul{
  list-style-type: none;
}

a{
  color: white;
  text-decoration: none;
}
html, body, .viewport {
  width: 100%;
  height: 100%;
  margin: 0;
}

nav.top a{
  margin-left: 9px;
  margin-right: 20px;
  padding-top: 8px;
  padding-right: 7px;
  padding-bottom: 9px;
  padding-left: 7px;
  border-radius: 5px;

}
nav.top li a.top-link:hover{
  background: rgba(0, 0, 0, .5);
  color: white;
}

nav.top li a.signin{
  padding-top: 10px;
  padding-right: 14px;
  padding-bottom: 12px;
  padding-left: 14px;
  box-shadow: inset 0 0 0 2px grey;
  border-radius: 5px;
}
nav.top li a.signin:hover{
  box-shadow: inset 0 0 0 2px white;
}

input[type=checkbox]{
  display: none;
}
.menu{
  height: 0px;
  opacity: 0;
  background-color: #492d78;
  color: white;
  font-size: 1.75rem;
  position: fixed;
  width: 100%;
  left: 0px;
  bottom: 0px;
  text-align: left;
  line-height: 4.375rem;
}

.menubutton{
  padding-top: 10px;
  padding-right: 14px;
  padding-bottom: 12px;
  padding-left: 14px;
  margin-right: 20px;
  box-shadow: inset 0 0 0 2px grey;
  border-radius: 5px;
  display: none;
}

.menu_mobile{
  text-align: right;
  margin-right: 40px;
  font-weight: bolder;
  color: lightgrey;
}

.menu_mobile label:hover{
  color: white;
}

.menubutton:hover{
  box-shadow: inset 0 0 0 2px white;
}

.top.row-container .row-container {
  padding-right: 10px;

}
.row-container{
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
}

.social {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
  bottom: 5px;
}

.bottom-section li{
  color: lightgrey;
}
.bottom-section li:hover{
  color: white;
}

.bottom-section{
  display: flex;
  flex-flow: row;
  justify-content: space-between;
  max-width: 1014px;
  margin: auto;
}

.cover {
  min-height: 110%;
  background-image: url(images/background_geo.jpg);
  background-size: cover;
  display: flex;
  flex-flow: column;
}

.content{
  height: 600px;
}

.gradient{
  background: linear-gradient(rgba(0,0,0,0) 10px, #3a1e4f 67%);
}

.plus, .minus{
  justify-content: flex-end;
  display: none;
}

.bottom-section{
  padding-top: 35px;
  padding-bottom: 40px;
  padding: 5px;
  text-align: right;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.social.row-container .row-container {
  justify-content: space-around;
  align-items: stretch;
}
.link-columns{
  display: flex;
  flex-direction: column;
  align-items:center;
}

.center-item button  {
    display: inline-block;
    font-size: 1.249rem;
    font-weight: 700;
    text-decoration: none;
    border: 1px solid #F3F0F0;
    border-radius: 4px;
    background: #141E6F;
    color: #FFF;
    line-height: 3.749rem;
    padding: 0 22px;
}
.center-item input {
  display: inline-block;
  font-size: 1.249rem;
  font-weight: 400;
  text-decoration: none;
  border-radius: 4px;
  line-height: 3.749rem;
  padding: 0 22px;
}

.center-item {
  display: flex;
  flex-direction: column;
  align-self: center;
  align-items: center;
  flex: 1;
  margin: 0;
  margin-top: 19px;
  font-size: 16px;
}

#footer li {
  display: flex;
  align-items: stretch;
  padding-left: 10px;
  padding-right: 10px;
}

@media only screen and (max-width: 640px) {

  .content{
    border-bottom: none;
    padding-bottom: 40px;
  }

  .bottom-section{
    display: flex;
    flex-direction: column;
    background: linear-gradient(rgba(0,0,0,0) 5px, #3a1e4f 1%);
  }

  .link-columns{
    border-top-width: 1px;
    border-top-style: solid;
    padding-top:14px;
    padding-right: 18px;
    padding-bottom: 10px;
    padding-left: 18px;
    margin:0;
  }

  .social.row-container{
    border-top-width: 1px;
    border-top-style: solid;
  }

  .bottom-section li{
    display: none;
    text-align: left;
  }

  .bottom-section .link-columns input{
    display: none;
  }

  .head{
    display: flex;
    flex-flow: row;
    justify-content: space-between;
  }
  .plus{
    display: block;
  }

  input[type=checkbox]#list1:checked + ul li{
  display: block;
  }
  input[type=checkbox]#list2:checked + ul li{
  display: block;;
  }
  input[type=checkbox]#list3:checked + ul li{
  display: block;;
  }
  input[type=checkbox]#list1:checked + label ul li{
  display: block;
  }
  input[type=checkbox]#list1:checked + label div span.plus{
  display: none;
  }
  input[type=checkbox]#list1:checked + label div span.minus{
  display: block;
  }
  input[type=checkbox]#list2:checked + label ul li{
  display: block;
  }
  input[type=checkbox]#list2:checked + label div span.plus{
  display: none;
  }
  input[type=checkbox]#list2:checked + label div span.minus{
  display: block;
  }
  input[type=checkbox]#list3:checked + label ul li{
  display: block;
  }
  input[type=checkbox]#list3:checked + label div span.plus{
  display: none;
  }
  input[type=checkbox]#list3:checked + label div span.minus{
  display: block;
  }
  input[type=checkbox]#list4:checked + label ul li{
  display: block;
  }
  input[type=checkbox]#list4:checked + label div span.plus{
  display: none;
  }
  input[type=checkbox]#list4:checked + label div span.minus{
  display: block;
  }

}

@media only screen and (max-width: 640px) {

  nav.top li.top-link{
    display: none;
  }

  .menubutton{
    display: block;
  }

  input[type=checkbox]#menucheckbox:checked + nav.menu{
    opacity: .95;
    height: 100%;
  }

  .center-item{
    max-width: 100%;
  }

  .center-item form{
    display: flex;
    flex-flow: column;
  }

  .center-item button, .center-item input{
    margin: auto;
    margin-bottom: .59rem;
  }

  .center-item button{
    align-items: center;
    width: 240px;
  }

}

@media only screen and (min-width: 853px) {
  .cover {
    min-height: 100%;
  }
}

